feat(output): more output options
This cleans up the output some more so it's usable by shell scripts.
Adding in the --fgonly, --bgonly, and --verbose options to the output.

Also, cleans up the .cargo/config.toml some, which means I need to list
all the platforms that get stripped rather than the platforms that don't
get stripped.

DCO-1.1 Signed-off-by: Patrick Wagstrom <160672+pridkett@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ lto = true               # Enable Link-Time Optimization for better performance
 codegen-units = 1        # Helps improve optimization at the cost of compilation time
 debug = false            # Strip out debug symbols to minimize the size
 panic = "abort"          # Smaller binary by avoiding panic unwind code
-strip = true             # Removes symbol tables and debug information for smaller binaries
+strip = false            # this breaks Linux -> MacOS cross compilation
 
 [dependencies]
 base16ct = "0.2.0"
