fix(build): hack to fix darwin builds
Previously I had stripping turned off of all binaries for release
because of issues with Mach-O binaries with the default strip command
on my builder image. The README.md now documents how to hack around this
so stripping can be turned on for release binaries.

DCO-1.1 Signed-off-by: Patrick Wagstrom <160672+pridkett@users.noreply.github.com>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,13 +1,14 @@
-[target.x86_64-unknown-linux-musl]
-strip = "symbols"  # Enable stripping for Linux targets
+# [target.x86_64-unknown-linux-musl]
+# strip = "symbols"  # Enable stripping for Linux targets
 
-[target.armv7-unknown-linux-musleabihf]
-strip = "symbols"  # Enable stripping for 32-bit ARM targets
+# [target.armv7-unknown-linux-musleabihf]
+# strip = "symbols"  # Enable stripping for 32-bit ARM targets
 
-[target.aarch64-unknown-linux-musl]
-strip = "symbols"  # Enable stripping for 64-bit ARM targets
+# [target.aarch64-unknown-linux-musl]
+# strip = "symbols"  # Enable stripping for 64-bit ARM targets
 
-[target.aarch64-apple-darwin]
+# [target.aarch64-apple-darwin]
+# strip = "none"
 # linker = "arm64e-apple-darwin22.4-clang"
 # note - we need to manually run llmv-strip on the binary
 
