--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,6 +71,7 @@ jobs:
         if: contains(matrix.os, 'ubuntu')
         run: |
           cd target/${{ matrix.target.triple }}/release
+          ls -alR
           strip ${{ matrix.binary_name }} || true
           tar -czf ${{ matrix.asset_name }}.tar.gz ${{ matrix.binary_name }}
           echo "ASSET_PATH=target/${{ matrix.target.triple }}/release/${{ matrix.asset_name }}.tar.gz" >> $GITHUB_ENV
@@ -79,6 +80,7 @@ jobs:
         if: contains(matrix.os, 'macos')
         run: |
           cd target/${{ matrix.target.triple }}/release
+          ls -alR
           strip ${{ matrix.binary_name }} || true
           tar -czf ${{ matrix.asset_name }}.tar.gz ${{ matrix.binary_name }}
           echo "ASSET_PATH=target/${{ matrix.target.triple }}/release/${{ matrix.asset_name }}.tar.gz" >> $GITHUB_ENV
