chore(ci): clean up repository and prepare for publishing
This doesn't do any functional changes, but does clean up the repository
some so it can be published to crates.io and therefore can be installed
with `cargo install prompt-color-tool` in the future.

DCO-1.1 Signed-off-by: Patrick Wagstrom <160672+pridkett@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "prompt-color-tool"
 version = "0.1.0"
 edition = "2021"
+authors = ["Patrick Wagstrom <patrick@wagstrom.net>"]
+license = "MIT"
+repository = "https://github.com/pridkett/prompt-color-tool"
+readme = "README.md"
+categories = ["command-line-utilities"]
+keywords = ["cli", "tool", "rust", "prompt", "terminal", "color"]
 
 [lib]
 name = "prompt_color_tool"
