--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/pridkett/prompt-color-tool"
 readme = "README.md"
 categories = ["command-line-utilities"]
 keywords = ["cli", "tool", "rust", "prompt", "terminal", "color"]
-description = "A tool for generating terminal prompt colors"
+description = "A tool for generating terminal prompt colors based on machine hostname"
 homepage = "https://github.com/pridkett/prompt-color-tool"
 
 [lib]
