fix(ci): use gzip for deb compression
I guess that the build script was defaulting to using zstandard
compression, which older versions of dpkg don't have. This should
force the build to use gzip.

DCO-1.1 Signed-off-by: Patrick Wagstrom <160672+pridkett@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,6 +119,7 @@ jobs:
           echo "YEAR_RANGE=2024-2025" >> $GITHUB_ENV
           echo "MAINTAINER=Patrick Wagstrom <patrick@wagstrom.net>" >> $GITHUB_ENV
           echo "HOMEPAGE=https://github.com/pridkett/prompt-color-tool" >> $GITHUB_ENV
+          echo "DEB_DPKG_COMPRESSION=gzip" >> $GITHUB_ENV
 
       - name: Create Debian control file
         if: contains(matrix.os, 'ubuntu')
