fix(ci): check to see if version already on crates.io
crates.io does not allow you to republish anything - so before failing
out because it's the second or third time we've tried to fix our build
scripts, we'll just skip out if it has already been published.

DCO-1.1 Signed-off-by: Patrick Wagstrom <160672+pridkett@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -215,7 +215,9 @@ jobs:
       
       - name: Get version from tag
         id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        run: |
+          echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+          echo "Crate version: $version"
       
       - name: Check version in Cargo.toml
         run: |
@@ -224,8 +226,34 @@ jobs:
             echo "Error: Version in Cargo.toml ($CARGO_VERSION) does not match tag version (${{ steps.get_version.outputs.VERSION }})"
             exit 1
           fi
-      
+          
+      - name: Get crate name
+        id: get_name
+        run: |
+          # Extract the crate name from Cargo.toml (assumes name is the first occurrence)
+          name=$(grep '^name' Cargo.toml | head -n 1 | cut -d '"' -f2)
+          echo "crate_name=$name" >> $GITHUB_OUTPUT
+          echo "Crate name: $name"
+
+      - name: Check if version exists on crates.io
+        id: check_version
+        run: |
+          version="${{ steps.get_version.outputs.crate_version }}"
+          crate_name="${{ steps.get_name.outputs.crate_name }}"
+          echo "Checking if version '$version' exists for crate '$crate_name'"
+          # Query crates.io API for this crate
+          response=$(curl -s "https://crates.io/api/v1/crates/$crate_name")
+          # Look for the version in the versions array using jq
+          if echo "$response" | jq -e --arg ver "$version" '.versions[] | select(.num == $ver)' > /dev/null; then
+            echo "version exists on crates.io"
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "version does not exist on crates.io"
+            echo "exists=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Publish to crates.io
+        if: steps.check_version.outputs.exists == 'false'
         uses: actions-rs/cargo@v1
         with:
           command: publish
