fix(ci): another try at switching compression to gzip
This is another try to switch compression to gzip instead of zstd,
because older versions of raspbian don't support zstd.

DCO-1.1 Signed-off-by: Patrick Wagstrom <160672+pridkett@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -175,7 +175,7 @@ jobs:
             chmod 755 debian/usr/bin/${{ matrix.binary_name }}
 
             # Build the package
-            dpkg-deb --build debian
+            dpkg-deb --build -Zgzip debian
             
             # Rename the package
             mv debian.deb prompt-color-tool_${VERSION}_${{ matrix.target.deb_arch }}.deb
